refactor: User, Channel, Message 도메인의 DTO 계층 분리 및 @Valid 입력값 검증 추가