@@ -1,9 +1,9 @@
 package com.sprint.mission.discodeit.service.basic;
 
-import com.sprint.mission.discodeit.dto.ChannelMessageList;
-import com.sprint.mission.discodeit.dto.CreateMessageRequest;
-import com.sprint.mission.discodeit.dto.MessageResponseDto;
-import com.sprint.mission.discodeit.dto.MessageUpdate;
+import com.sprint.mission.discodeit.dto.channel.ChannelMessageList;
+import com.sprint.mission.discodeit.dto.message.CreateMessageRequest;
+import com.sprint.mission.discodeit.dto.message.MessageDto;
+import com.sprint.mission.discodeit.dto.message.MessageUpdate;
 import com.sprint.mission.discodeit.entity.BinaryContent;
 import com.sprint.mission.discodeit.entity.Channel;
 import com.sprint.mission.discodeit.entity.Message;
@@ -19,12 +19,9 @@ import java.io.IOException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.time.Instant;
-import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -40,11 +37,8 @@ public class BasicMessageService implements MessageService {
 
   @Override
   @Transactional
-  public MessageResponseDto createMessage(CreateMessageRequest request,
+  public MessageDto createMessage(CreateMessageRequest request,
       List<MultipartFile> attachments) {
-    if (request.content() == null || request.content().isBlank()) {
-      throw new BusinessLogicException(ExceptionCode.MESSAGE_CONTENT_EMPTY);
-    }
     Channel channel = channelRepository.findById(request.channelId())
         .orElseThrow(() -> new BusinessLogicException(ExceptionCode.CHANNEL_NOT_FOUND));
     User author = userRepository.findById(request.authorId())
@@ -70,27 +64,29 @@ public class BasicMessageService implements MessageService {
 
     Message savedMessage = messageRepository.save(message);
 
-    return MessageResponseDto.from(savedMessage);
+    return MessageDto.from(savedMessage);
   }
 
   @Override
-  public Message readMessage(UUID id) {
-    return messageRepository.findById(id)
+  public MessageDto readMessage(UUID id) {
+    Message message = messageRepository.findById(id)
         .orElseThrow(() -> new BusinessLogicException(ExceptionCode.MESSAGE_NOT_FOUND));
+    return MessageDto.from(message);
   }
 
   @Override
-  public List<Message> readMessagesByChannel(UUID channelId) {
+  public List<MessageDto> readMessagesByChannel(UUID channelId) {
     return messageRepository.findByChannelId(channelId).stream()
         .sorted(Comparator.comparing(Message::getCreatedAt))
-        .collect(Collectors.toList());
+        .map(MessageDto::from)
+        .toList();
   }
 
   @Override
-  public List<MessageResponseDto> findAllByChannelId(ChannelMessageList request) {
+  public List<MessageDto> findAllByChannelId(ChannelMessageList request) {
     return messageRepository.findByChannelId(request.channelId()).stream()
         .sorted(Comparator.comparing(Message::getCreatedAt))
-        .map(MessageResponseDto::from)
+        .map(MessageDto::from)
         .toList();
   }
 
@@ -108,15 +104,13 @@ public class BasicMessageService implements MessageService {
   }
 
   @Override
-  @Transactional //여기 하는중!
-  public void updateMessage(UUID id, MessageUpdate request) {
-    if (request.newContent() == null || request.newContent().isBlank()) {
-      throw new BusinessLogicException(ExceptionCode.MESSAGE_CONTENT_EMPTY);
-    }
-
+  @Transactional
+  public MessageDto updateMessage(UUID id, MessageUpdate request) {
     Message mes = messageRepository.findById(id)
         .orElseThrow(() -> new BusinessLogicException(ExceptionCode.MESSAGE_NOT_FOUND));
 
     mes.update(request.newContent());
+
+    return MessageDto.from(mes);
   }
 }
